--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ At Google, I lead a research team working at the intersection of Computer Vision
  Teaser" src="./media/skulls.gif" class="img-fluid" max-width=256>
   </div>
     <div class="col-md-9 offset-md-0">
-      <p class="lead">
+      <p class="lead"><span class="badge rounded-pill bg-success">CVPR'24</span>
 	   Single Mesh Diffusion Models with Field Latents for Texture Generation<br>
        <span class="text-muted">
          Thomas W Mitchel, Carlos Esteves, and Ameesh Makadia<br>
